--- a/Hawaii_Climate_Analysis_Main.ipynb
+++ b/Hawaii_Climate_Analysis_Main.ipynb
@@ -25,12 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime as dt\n",
-    "from scipy import stats"
+    "from scipy.stats import ttest_ind"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "max         6.700000"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
        "[1700 rows x 3 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
        "[1517 rows x 3 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,47 +1367,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([73., 79., 71., 76., 74., 73., 72., 75., 78., 79., 79., 76., 77.,\n",
-       "       77., 80., 78., 75., 72., 70., 74., 76., 77., 76., 79., 76., 68.,\n",
-       "       78., 72., 76., 77., 74., 79., 78., 75., 71., 76., 77., 73., 76.,\n",
-       "       77., 75., 74., 78., 73., 70., 70., 77., 76., 76., 77., 78., 69.,\n",
-       "       78., 76., 79., 70., 75., 81., 79., 72., 74., 76., 79., 78., 73.,\n",
-       "       74., 78., 72., 78., 75., 79., 72., 73., 74., 75., 73., 78., 75.,\n",
-       "       74., 81., 67., 73., 73., 70., 74., 79., 80., 77., 78., 80., 74.,\n",
-       "       80., 76., 79., 75., 77., 75., 74., 76., 77., 77., 75., 74., 74.,\n",
-       "       78., 73., 78., 79., 80., 79., 79., 78., 72., 71., 72., 76., 71.,\n",
-       "       71., 77., 78., 71., 74., 72., 69., 74., 76., 75., 76., 74., 74.,\n",
-       "       77., 74., 80., 74., 72., 71., 70., 76., 73., 73., 78., 78., 70.,\n",
-       "       78., 77., 72., 78., 79., 78., 77., 79., 76., 73., 76., 79., 72.,\n",
-       "       78., 77., 78., 73., 75., 77., 79., 74., 80., 74., 72., 72., 70.,\n",
-       "       76., 73., 68., 72., 76., 72., 78., 78., 77., 73., 69., 79., 80.,\n",
-       "       77., 78., 77., 71., 75., 71., 79., 77., 71., 80., 74., 77., 72.,\n",
-       "       71., 76., 80., 75., 75., 74., 78., 69., 78., 67., 68., 73., 81.,\n",
-       "       75., 72., 73., 70., 78., 76., 75., 72., 70., 77., 71., 75., 76.,\n",
-       "       75., 78., 82., 78., 71., 73., 76., 78., 73., 74., 75., 79., 76.,\n",
-       "       78., 75., 81., 77., 71., 78., 78., 79., 69., 73., 71., 72., 73.,\n",
-       "       71., 68., 77.])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T Value: 31.60372399000329\n",
+      "P Value: 3.9025129038616655e-191\n"
+     ]
     }
    ],
    "source": [
+    "#Create Numpy Arrays of June & December Temperature Data\n",
+    "june_sample = np.array(june_temps['tobs'])\n",
+    "december_sample = np.array(december_temps['tobs'])\n",
+    "\n",
     "#Run Paired T-Test to Determine if Mean June & December Temperatures are Statistically Significant\n",
-    "june_sample = np.array(june_temps['tobs'].sample(n = 250))\n",
-    "december_sample = np.array(december_temps['tobs'].sample(n = 250))\n",
+    "t_value, p_value = ttest_ind(june_sample, december_sample)\n",
     "\n",
-    "#t, p = stats.ttest_ind(june_sample, december_sample, eq_var = False)\n",
-    "\n",
-    "june_sample"
+    "#Display T Statistic & P Value for June & December Temperature Data\n",
+    "print('T Value: ' + str(t_value))\n",
+    "print('P Value: ' + str(p_value))"
    ]
   },
   {
