Updated Jupyter Notebook Python Code.

--- a/Hawaii_Climate_Analysis_Main.ipynb
+++ b/Hawaii_Climate_Analysis_Main.ipynb
@@ -1367,15 +1367,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T Value: 31.60372399000329\n",
-      "P Value: 3.9025129038616655e-191\n"
+      "31.60372399000329\n",
+      "3.9025129038616655e-191\n"
      ]
     }
    ],
@@ -1388,26 +1388,17 @@
     "t_value, p_value = ttest_ind(june_sample, december_sample)\n",
     "\n",
     "#Display T Statistic & P Value for June & December Temperature Data\n",
-    "print('T Value: ' + str(t_value))\n",
-    "print('P Value: ' + str(p_value))"
+    "print(t_value)\n",
+    "print(p_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(62.0, 69.57142857142857, 74.0)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# This function called `calc_temps` will accept start date and end date in the format '%Y-%m-%d' \n",
-    "# and return the minimum, average, and maximum temperatures for that range of dates\n",
+    "#Define Calc Temps Function to Query Database for Maximum/Minimum/Average Temperature Data for a Given Date Range\n",
     "def calc_temps(start_date, end_date):\n",
     "    \"\"\"TMIN, TAVG, and TMAX for a list of dates.\n",
     "    \n",
@@ -1420,28 +1411,43 @@
     "    \"\"\"\n",
     "    \n",
     "    return session.query(func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)).\\\n",
-    "        filter(Measurement.date >= start_date).filter(Measurement.date <= end_date).all()\n",
-    "\n",
-    "# function usage example\n",
-    "print(calc_temps('2012-02-28', '2012-03-05'))"
+    "        filter(Measurement.date >= start_date).filter(Measurement.date <= end_date).all()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "62.0 68.36585365853658 74.0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'2017-01-17'"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Use your previous function `calc_temps` to calculate the tmin, tavg, and tmax \n",
-    "# for your trip using the previous year's data for those same dates.\n"
+    "#Set Trip Date Range\n",
+    "trip_start = '2017-12-18'\n",
+    "trip_end = '2018-01-17'\n",
+    "\n",
+    "#Split Trip Start & End Dates at Dashes to Isolate Year/Month/Day\n",
+    "start_split = trip_start.split('-')\n",
+    "end_split = trip_end.split('-')\n",
+    "\n",
+    "#Subtract One from Year Index\n",
+    "start_split[0] = str(int(start_split[0]) - 1)\n",
+    "end_split[0] = str(int(end_split[0]) - 1)\n",
+    "\n",
+    "#Re-Assemble Date Value & Record as Year Prior Trip Dates\n",
+    "prior_start = start_split[0] + '-' + start_split[1] + '-' + start_split[2]\n",
+    "prior_end = end_split[0] + '-' + end_split[1] + '-' + end_split[2]\n",
+    "\n",
+    "prior_end"
    ]
   },
   {
