--- a/Hawaii_Climate_Analysis_Main.ipynb
+++ b/Hawaii_Climate_Analysis_Main.ipynb
@@ -1470,14 +1470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Station ID', 'Station Name', 'Station Latitude', ' Station Longitude', 'Station Elevation (ft)', 'Precipitation (in)')\n",
+      "('Station ID', 'Station Name', 'Station Latitude', ' Station Longitude', 'Station Elevation (ft)', 'Precipitation Total (in)')\n",
       "('USC00516128', 'MANOA LYON ARBO 785.2, HI US', 21.3331, -157.8025, 152.4, 10.93)\n",
       "('USC00519281', 'WAIHEE 837.5, HI US', 21.45167, -157.84888999999998, 32.9, 3.2499999999999996)\n",
       "('USC00513117', 'KANEOHE 838.1, HI US', 21.4234, -157.8015, 14.6, 2.73)\n",
